--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -1,4 +1,7 @@
 .button {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
   background-color: white;
   border-radius: 1px;
   height: 48px;
